<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="center"
    android:background="#83887B">

    <TextView
        android:id="@+id/subjectNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="#333333"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/totalClassesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_classes_0"
        android:textSize="18sp"

        android:textColor="@color/white"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/classesAttendedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classes_attended_0"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/attendancePercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/attendance_percentage_0"
        android:textSize="20sp"
        android:textColor="#EE5B2F"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/presentButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/present"
            android:textColor="@android:color/white"
            android:background="#4CAF50"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/absentButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/absent"
            android:textColor="@android:color/white"
            android:background="#F44336"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>
